New build regime. CMake support for GCC. I'm tired of working on this. MSVC can't be supported because of a CMake/Microsoft bug in the vcxproj file. https://gitlab.kitware.com/cmake/cmake/issues/17060#note_289810 has details. There is a VS project, although it may be slightly out-of-sync with the new external-libs configuration. I want to see about vcpkg. Next is new README instructions.
git-svn-id: https://svn.code.sf.net/p/collada-dom/code/trunk@919 dfea1ed5-6b0d-0410-973e-e49e28f48b26

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,240 +1,229 @@
-cmake_minimum_required (VERSION 2.6.0)
-project (collada-dom)
-set( CMAKE_ALLOW_LOOSE_LOOP_CONSTRUCTS TRUE )
+cmake_minimum_required(VERSION 3.0.0 FATAL_ERROR)
 
-# Define here the needed parameters
-set (COLLADA_DOM_VERSION_MAJOR 2)
-set (COLLADA_DOM_VERSION_MINOR 4)
-set (COLLADA_DOM_VERSION_PATCH 0)
-set (COLLADA_DOM_VERSION ${COLLADA_DOM_VERSION_MAJOR}.${COLLADA_DOM_VERSION_MINOR}.${COLLADA_DOM_VERSION_PATCH})
-set (COLLADA_DOM_SOVERSION ${COLLADA_DOM_VERSION_MAJOR}.${COLLADA_DOM_VERSION_MINOR})
+####This is a hook for developers to use.
+####Please have it print out what changes it makes via the CMake's message API.
+include(developer.cmake OPTIONAL)
 
-message(STATUS "Compiling Collada DOM Version ${COLLADA_DOM_VERSION}")
+#SVN-EXTERNALS: cmake-modules/CMakePCHCompiler
+list(APPEND CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake-modules/CMakePCHCompiler)
+
+#if(MSVC) is not true until after project() is utilized.
+project(colladadom25 VERSION 2.5.0 LANGUAGES CXX CXXPCH)
+if(MSVC)
+	#https://gitlab.kitware.com/cmake/cmake/issues/17060
+	cmake_minimum_required(VERSION 3.9.0 FATAL_ERROR)
+	message(FATAL_ERROR #CMake can't do this over multiple lines???
+"Please use viewer/projects/vc10-Win/viewer.sln until https://gitlab.kitware.com/cmake/cmake/issues/17060 is resolved. Sorry. --COLLADA-DOM project")
+endif()
+
+cmake_policy(SET CMP0004 OLD) #allow untrimmed whitespace
+
+#CMake should provide this level of abstraction, but it's dumb.
+macro(_ f etc win)
+	set(sel 0)
+	if(WIN32)
+		set(sel ${win})
+	else()
+		set(sel ${etc})
+	endif()
+	if(NOT sel EQUAL 0)
+	set(_${f} ${sel})
+	endif()
+endmacro()
+#O1 or O2 is needed to keep the file small to help it not outgrow the file system.
+#Without g0 there is a "string table overflow at offset" and "File too big" error
+#with GCC 6.3.0 on Cygwin. Removing debug makes it smaller. String pooling may be
+#off in g0 mode also. It may be done in the linker.
+_(bigobj "-Wa,-mbig-obj -g0 -O1" /bigobj)
+_(whole-archive -Wl,--whole-archive 0)
+_(no-whole-archive -Wl,--no-whole-archive 0)
+_(no-strict-aliasing -fno-strict-aliasing 0) ##REMOVE ME
+_(rtti -frtti 0)
+_(visibility -fvisibility=hidden 0)
+_(permissive -fpermissive 0)
+_(Wall -Wall 0)
+_(Wno-multichar -Wno-multichar 0)
+_(Wno-unused-but-set-variable -Wno-unused-but-set-variable 0)
+#Windows flags (not necessarily MSVC.)
+#These are set together in the subdirectories even though
+#the compile options can be set anywhere, right here even.
+_(wincompile -mconsole /GF) #string-pooling 
+_(winlink 0 /SUBSYSTEM:WINDOWS)
+
+message(STATUS "Compiling COLLADA-DOM Version ${PROJECT_VERSION}")
 message(STATUS "Using cmake version ${CMAKE_MAJOR_VERSION}.${CMAKE_MINOR_VERSION}" )
 
-# http://www.cmake.org/cmake/help/cmake-2.6.html#policy:CMP0002
-cmake_policy(SET CMP0002 NEW)
-# http://www.cmake.org/cmake/help/cmake-2.6.html#policy:CMP0003
-cmake_policy(SET CMP0003 NEW)
-
-# Use, i.e. don't skip the full RPATH for the build tree
-set(CMAKE_SKIP_BUILD_RPATH  FALSE)
-
-# When building, don't use the install RPATH already
-# (but later on when installing)
-set(CMAKE_BUILD_WITH_INSTALL_RPATH FALSE)
-
-# The RPATH to be used when installing
-set(CMAKE_INSTALL_RPATH "${CMAKE_INSTALL_PREFIX}/lib${LIB_SUFFIX}")
-
-# Add the automatically determined parts of the RPATH
-# which point to directories outside the build tree to the install RPATH
-set(CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE)
+#How many of these are used?
+include(CheckIncludeFile) #Seem to need both this and CXX.
+include(CheckIncludeFileCXX) #<unordered_map> feature test
+#include(CheckLibraryExists)
+#include(CheckFunctionExists)
+#include(CheckCXXSourceCompiles)
+#include(CheckCXXSourceRuns)
+#include(CheckCXXCompilerFlag)
+include(CheckTypeSize) #nullptr feature test
+#include(PkgConfig)
+find_package(PkgConfig QUIET) #Somehow enables pkg_check_modules???
+if(PKGCONFIG_FOUND AND WIN32)
+	#WHY NOT PKGCONFIG!?!?!?!?
+	if(PKG_CONFIG_EXECUTABLE MATCHES "/bin/")
+		message("Not using ${PKG_CONFIG_EXECUTABLE} because it looks like Cygwin (/bin/)")
+		set(PKGCONFIG_FOUND 0)
+	endif()
+endif()
+#Defines CMAKE_INSTALL_LIBDIR, but what else?
+INCLUDE(GNUInstallDirs)
 
 message(STATUS "installing to ${CMAKE_INSTALL_PREFIX}")
 
-##############################################################################
-# Custom CMake options
-##############################################################################
+####CMake-GUI options##########################
 
-option(OPT_COMPILE_VIEWER "Enable collada viewer compilation" OFF)
-option(OPT_COMPILE_FX "Enable collada fx compilation" OFF)
-option(OPT_COMPILE_RT "Enable collada rt compilation" OFF)
-option(OPT_COMPILE_TESTS "Compile collada tests" OFF)
-option(OPT_BUILD_PACKAGES "Set to ON to generate CPack configuration files and packaging targets" OFF)
-option(OPT_BUILD_PACKAGE_DEFAULT "Set to ON to generate a default openrave package that creates symlinks" ON)
-option(OPT_DOUBLE_PRECISION "Use double precision for everything (daeFloat included)" ON)
+#These names need to stick out when building the external-libs projects.
+option(COLLADA_DOM__LEGACY_LIBXML2 "Try to build-in LibXML2 I/O plugin" ON)
+option(COLLADA_DOM__LEGACY_TINYXML "Try to build-in TinyXML I/O plugin" OFF)
+option(COLLADA_DOM__COMPILE_VIEWER "Build colladadom3d reference/viewer" ON)
+option(COLLADA_DOM__SINGLE_PRECISION "Use single-precision colladadom3d" ON)
+option(COLLADA_DOM__TARGET_PS3 "Use its ancient PlayStation3 entrypoint" OFF)
+#Enable PCH in dom/ output. Only use if you understand its pros/cons.
+if(NOT COLLADA_DOM__ENABLE_LIBRARY_PCH)
+option(COLLADA_DOM__ENABLE_LIBRARY_PCH "Use ColladaDOM.inl as PCH header" OFF)
+endif()
 
-set(COLLADA_DOM_EXTERNAL_FLAGS "${COLLADA_DOM_EXTERNAL_FLAGS}")
+####FEATURE TESTS##############################
 
-set(CPACK_DEBIAN_PACKAGE_NAME collada-dom${COLLADA_DOM_SOVERSION})
-if(OPT_DOUBLE_PRECISION)
-  set(COLLADA_PRECISION "dp")
-  set(CPACK_DEBIAN_PACKAGE_NAME "${CPACK_DEBIAN_PACKAGE_NAME}-dp")
-  set(COLLADA_DOM_EXTERNAL_FLAGS "${COLLADA_DOM_EXTERNAL_FLAGS} -DCOLLADA_DOM_FLOAT=double") # daeFloat is 64 bit
-  set(COLLADA_DOM_EXTERNAL_FLAGS "${COLLADA_DOM_EXTERNAL_FLAGS} -DCOLLADA_DOM_DOUBLE=double") # stake claim on it
-  message(STATUS "compiling with double float precision")
+#The new headers write nullptr instead of NULL or 0 but don't use
+#its C++ template functionality. It's just for code style/reading.
+check_type_size(nullptr HAVE_NULLPTR LANGUAGE CXX)
+if(NOT HAVE_NULLPTR)
+	add_definitions(-DCOLLADA_DOM_NEED_NULLPTR)
+endif()
+
+#daePlatform.h needs this for preprocessor math and align pragmas.
+#It uses SIZE_MAX by default, but it's a C++11 addition to limits.
+if(8 EQUAL CMAKE_SIZEOF_VOID_P) 
+	add_definitions(-DCOLLADA_UPTR_MAX=0xffFFffFFffFFffFFULL)
 else()
-# NOTE: THIS IS NOT REALLY "sp" BECAUSE COLLADA MOSTLY USES double
-  set(COLLADA_PRECISION "sp")
-  set(CPACK_DEBIAN_PACKAGE_NAME "${CPACK_DEBIAN_PACKAGE_NAME}-sp")
-  message(STATUS "compiling with single float precision")
+	add_definitions(-DCOLLADA_UPTR_MAX=0xffFFffFF)
 endif()
 
-
-if( OPT_COMPILE_VIEWER )
-  message(WARNING "compiling collada viewer currently not supported")
-endif()
-if( OPT_COMPILE_FX )
-  message(WARNING "compiling collada fx currently not supported")
-endif()
-if( OPT_COMPILE_RT )
-  message(WARNING "compiling collada rt currently not supported")
+#map is used if this is not defined. Both use an allocator, and so
+#it's debatable which is better at string and element name look up.
+check_include_file_cxx("unordered_map" HAVE_UNORDERED_MAP)
+if(HAVE_UNORDERED_MAP)
+	add_definitions(-DCOLLADA_DOM_UNORDERED_MAP -DCOLLADA_DOM_UNORDERED_MAP)
 endif()
 
-set(PACKAGE_VERSION "0" CACHE STRING "the package-specific version used for uploading the sources")
+####BUILD/INSTALL###############################
 
-set(CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake-modules")
-set(COMPONENT_PREFIX "${CPACK_DEBIAN_PACKAGE_NAME}")
-string(TOUPPER ${COMPONENT_PREFIX} COMPONENT_PREFIX_UPPER)
-set(CPACK_COMPONENTS_ALL ${COMPONENT_PREFIX}-base ${COMPONENT_PREFIX}-dev)
+#Annoying.
+string(APPEND CMAKE_CXX_FLAGS_DEBUG " -D_DEBUG")
+string(APPEND CMAKE_CXX_FLAGS_RELEASE " -DNDEBUG")
+string(APPEND CMAKE_CXX_FLAGS_MINSIZEREL " -DNDEBUG")
+string(APPEND CMAKE_CXX_FLAGS_RELWITHDEBINFO " -DNDEBUG")
 
-if( MSVC )
-  if( MSVC70 OR MSVC71 )
-    set(MSVC_PREFIX "vc70")
-  elseif( MSVC80 )
-    set(MSVC_PREFIX "vc80")
-  elseif( MSVC90 )
-    set(MSVC_PREFIX "vc90")
-  else()
-    set(MSVC_PREFIX "vc100")
-  endif()
-  set(COLLADA_DOM_LIBRARY_SUFFIX "${COLLADA_DOM_SOVERSION}-${COLLADA_PRECISION}-${MSVC_PREFIX}-mt")
-else()
-  set(COLLADA_DOM_LIBRARY_SUFFIX "${COLLADA_DOM_SOVERSION}-${COLLADA_PRECISION}")
-endif()
+add_compile_options(${_fno-strict-aliasing}) ##SCHEDULED FOR REMOVAL
 
-include(CheckIncludeFile)
-include(CheckIncludeFileCXX)
-include(CheckLibraryExists)
-include(CheckFunctionExists)
-include(CheckCXXSourceCompiles)
-#include(CheckCXXSourceRuns)
-#include(CheckCXXCompilerFlag)
-include(CheckTypeSize)
-find_package(PkgConfig)
+add_compile_options(${_rtti} ${_visibility} ${_permissive} ${_Wall} ${_Wno-multichar})
 
-if( CMAKE_COMPILER_IS_GNUCC OR CMAKE_COMPILER_IS_GNUCXX )
-  add_definitions("-fno-strict-aliasing -Wall")
-endif()
+#Extend dom/include/WARNING.PHP to the end of the internal precompiled headers.
+add_definitions(-DCOLLADA_DOM_WARNING_HPP)
 
-if( CMAKE_COMPILER_IS_GNUCC OR CMAKE_COMPILER_IS_GNUCXX )
-  set(CMAKE_CXX_FLAGS_RELEASE "-O2")# -DNDEBUG -D_SECURE_SCL=0") # this practically removes all checks making it a very dangerous options to play with
-  set(CMAKE_CXX_FLAGS_RELWITHDEBINFO "-O2 -g")
-  set(CMAKE_CXX_FLAGS_DEBUG "-g -D_DEBUG")
-endif()
+macro(try_package name NAME)
+	find_package(${name} QUIET) 
+	if(NOT ${NAME}_FOUND AND PKGCONFIG_FOUND) 
+		pkg_check_modules(${NAME} QUIET ${name})
+	endif()
+	if(${NAME}_FOUND) 		
+		#standardize
+		list(APPEND ${NAME}_LIBRARIES "${${NAME}_LIBRARY}")
+		list(APPEND ${NAME}_INCLUDE_DIRS "${${NAME}_INCLUDE_DIR}")
+		message(STATUS "${name} found: ${${NAME}_INCLUDE_DIRS}")
+	else() 
+		#Later versions of cmake set these to NOTFOUND and cry if they
+		#are ever expanded :(
+		set(${NAME}_LIBRARIES "") #unset
+		set(${NAME}_INCLUDE_DIRS "") #unset
+	endif()
+endmacro()
 
-if( UNIX OR CMAKE_COMPILER_IS_GNUCC OR CMAKE_COMPILER_IS_GNUCXX )
-  set(STDC_LIBRARY stdc++)
-else()
-  set(STDC_LIBRARY)
-endif()
+#TODO: l should be the CMake target or??
+macro(try_external_libs l name NAME)
+	set(fullpath "${CMAKE_CURRENT_LIST_DIR}/external-libs/${name}")
+	if(IS_DIRECTORY ${fullpath}) 
+		message(STATUS "compiling ${name} from sources and linking statically")		
+		add_subdirectory(external-libs/${name})
+		set(${NAME}_LIBRARIES ${l})
+		set(${NAME}_INCLUDE_DIRS external-libs/${name})	
+	else()
+		message(STATUS "${fullpath} not found")
+	endif()
+endmacro()
 
-if( APPLE OR ${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
-  # apple doesn't have 64bit versions of file opening functions, so add them
-  add_definitions("-Dfopen64=fopen -Dfseeko64=fseeko -Dfseek64=fseek -Dftell64=ftell -Dftello64=ftello")
-endif()
+include_directories(dom/include)
 
-set(COLLADA_DOM_INCLUDE_INSTALL_DIR "include/collada-dom${COLLADA_DOM_SOVERSION}")
+add_subdirectory(dom) #core component C++98 portable-library
+if(COLLADA_DOM__COMPILE_VIEWER)
+	message(STATUS "building ColladaDOM 3 Reference Viewer")
 
-set(COLLADA_DOM_INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR}/dom/include)
-set(COLLADA_DOM_LINK_DIRS "")
+	find_package(OpenGL REQUIRED)
+	include_directories(${OPENGL_INCLUDE_DIRS})
 
-if(CMAKE_COMPILER_IS_GNUCC OR CMAKE_COMPILER_IS_GNUCXX)
-  set(EXTRA_COMPILE_FLAGS "${COLLADA_DOM_EXTERNAL_FLAGS} -fPIC")
-else()
-  set(EXTRA_COMPILE_FLAGS "${COLLADA_DOM_EXTERNAL_FLAGS}")
-endif()
+	#daeDouble is expected to match btScalar for time being.
+	try_package(bullet BULLET) 
+	if(COLLADA_DOM__SINGLE_PRECISION AND BULLET_DEFINITIONS MATCHES "BT_USE_DOUBLE_PRECISION")
+		set(COLLADA_DOM__SINGLE_PRECISION OFF)
+		message(WARNING "COLLADA_DOM__SINGLE_PRECISION forced to match BT_USE_DOUBLE_PRECISION")				
+	endif()
+	if(COLLADA_DOM__SINGLE_PRECISION)
+		add_definitions(-DCOLLADA_DOM_DOUBLE=float)
+	endif()
 
-find_package(ZLIB)
-if( NOT ZLIB_FOUND )
-  message(STATUS "compiling zlib from souces and linking statically")
-  # compile from sources
-  add_subdirectory(dom/external-libs/zlib-1.2.5)
-  set(ZLIB_FOUND 1)
-  set(ZLIB_LIBRARIES zlib)
-  set(ZLIB_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/dom/external-libs/zlib-1.2.5)
-endif()
+	#find_package(Cg REQUIRED) #Cg (Nvidia)
+	if(NOT DEFINED ENV{CG_INC_PATH})
+	message(FATAL_ERROR "Did not detect Nvidia Cg SDK environment variable CG_INC_PATH")	
+	endif()	
+	#HACK Let Windows paths be used by Cygwin.
+	#There are other ways but cmake_policy(SET CMP0021 OLD) seems to not work.
+	#include_directories("$ENV{CG_INC_PATH}")
+	add_definitions("-I\"$ENV{CG_INC_PATH}\"")
 
-find_package(LibXml2)
-if( LIBXML2_FOUND )
-  include_directories(${LIBXML2_INCLUDE_DIR})
-  add_definitions(${LIBXML2_DEFINITIONS} -DBUILDING_IN_LIBXML)
-  message(STATUS "libxml2 found")
-endif()
+	add_subdirectory(fx)
+	add_subdirectory(rt)	
+	add_subdirectory(viewer) #colladadom3d (executable)
+endif(COLLADA_DOM__COMPILE_VIEWER)
 
-pkg_check_modules(minizip minizip)
-if(minizip_FOUND)
-  set(MINIZIP_INCLUDE_DIR ${minizip_INCLUDE_DIRS})
-else()
-  message(STATUS "compiling minizip from sources and linking statically")
-  add_subdirectory(dom/external-libs/minizip-1.1)
-  set(MINIZIP_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/dom/external-libs/minizip-1.1 ${ZLIB_INCLUDE_DIR})
-endif()
+####PACKAGING###############################
 
-# declare minizip/zlib before libxml2! (for some reason the precompiled libxml2 libraries have zlib.h/zconf.h)
-include_directories(BEFORE ${MINIZIP_INCLUDE_DIR})
+set(bin ${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME})
+set(src ${CMAKE_CURRENT_SOURCE_DIR}/${PROJECT_NAME})
 
-link_directories(${COLLADA_DOM_LINK_DIRS})
+#This seems to be the new way to do this. Since CMake version??
+#Note, the camel-case file names are part of the documentation.
+include(CMakePackageConfigHelpers)
+write_basic_package_version_file("${bin}ConfigVersion.cmake"
+    VERSION ${PROJECT_VERSION} 
+	COMPATIBILITY SameMajorVersion)
+configure_package_config_file("${PROJECT_NAME}Config.cmake.in" "${bin}Config.cmake"    
+    INSTALL_DESTINATION "lib/cmake/${PROJECT_NAME}")
+install(FILES 
+	"${PROJECT_NAME}Config.cmake" 
+	"${bin}ConfigVersion.cmake"
+    DESTINATION "lib/cmake/${PROJECT_NAME}")
+install(EXPORT "${PROJECT_NAME}Targets"
+    NAMESPACE COLLADA_DOM::
+    DESTINATION "lib/cmake/${PROJECT_NAME}")
 
-add_subdirectory(dom)
+#OBSOLETE? pkg-config support (I think)
+#Note, dom/CMakeLists.txt sets up ${PC_LIBS} that is in turn expanded by colladadom25.pc.in.
+configure_file("${src}.pc.in" "${bin}.pc" @ONLY IMMEDIATE)
+install(FILES ${bin}.pc DESTINATION ${CMAKE_INSTALL_LIBDIR}/pkgconfig/ COMPONENT Devel)
 
-if(UNIX)
-  configure_file("${CMAKE_CURRENT_SOURCE_DIR}/collada-dom.pc.in" "${CMAKE_CURRENT_BINARY_DIR}/collada-dom.pc" @ONLY IMMEDIATE)
-  install(FILES ${CMAKE_CURRENT_BINARY_DIR}/collada-dom.pc DESTINATION lib${LIB_SUFFIX}/pkgconfig COMPONENT ${COMPONENT_PREFIX}-dev)
-endif()
+#### Monkey see, monkey do??? ################
 
-configure_file("${CMAKE_CURRENT_SOURCE_DIR}/collada_dom-config.cmake.in" "${CMAKE_CURRENT_BINARY_DIR}/collada_dom-config.cmake" @ONLY IMMEDIATE)
-configure_file("${CMAKE_CURRENT_SOURCE_DIR}/collada_dom-config-version.cmake.in" "${CMAKE_CURRENT_BINARY_DIR}/collada_dom-config-version.cmake" @ONLY IMMEDIATE)
-install(FILES "${CMAKE_CURRENT_BINARY_DIR}/collada_dom-config.cmake" "${CMAKE_CURRENT_BINARY_DIR}/collada_dom-config-version.cmake" DESTINATION "lib${LIB_SUFFIX}/cmake/collada_dom-${COLLADA_DOM_SOVERSION}" COMPONENT ${COMPONENT_PREFIX}-dev)
+export(EXPORT ${PROJECT_NAME}Targets
+    FILE "${CMAKE_CURRENT_BINARY_DIR}/COLLADA_DOM/${PROJECT_NAME}Targets.cmake"
+    NAMESPACE COLLADA_DOM::) #${PROJECT_NAME}
 
-# add make uninstall capability
-configure_file("${CMAKE_CURRENT_SOURCE_DIR}/cmake-modules/cmake_uninstall.cmake.in" "${CMAKE_CURRENT_BINARY_DIR}/cmake_uninstall.cmake" IMMEDIATE @ONLY)
-
-add_custom_target(uninstall "${CMAKE_COMMAND}" -P "${CMAKE_CURRENT_BINARY_DIR}/cmake_uninstall.cmake")
-
-if(CMAKE_CPACK_COMMAND AND UNIX AND OPT_BUILD_PACKAGES)
-  # Packing information
-  set(CPACK_PACKAGE_NAME collada-dom${COLLADA_DOM_SOVERSION})
-  set(CPACK_PACKAGE_CONTACT "" CACHE STRING "Package maintainer and PGP signer.")
-  set(CPACK_PACKAGE_VENDOR "http://sourceforge.net/projects/collada-dom")
-  set(CPACK_PACKAGE_DISPLAY_NAME "collada-dom ${COLLADA_DOM_VERSION}")
-  set(CPACK_PACKAGE_DESCRIPTION_SUMMARY " - COLLADA")
-  if( OPT_DOUBLE_PRECISION )
-    set(CPACK_PACKAGE_DESCRIPTION_SUMMARY "${CPACK_PACKAGE_DESCRIPTION_SUMMARY} using double precision")
-  else()
-    set(CPACK_PACKAGE_DESCRIPTION_SUMMARY "${CPACK_PACKAGE_DESCRIPTION_SUMMARY} using single precision")
-  endif()
-  set(CPACK_PACKAGE_VERSION ${COLLADA_DOM_VERSION}.${PACKAGE_VERSION})
-  set(CPACK_PACKAGE_VERSION_MAJOR ${COLLADA_DOM_VERSION_MAJOR})
-  set(CPACK_PACKAGE_VERSION_MINOR ${COLLADA_DOM_VERSION_MINOR})
-  set(CPACK_PACKAGE_VERSION_PATCH ${COLLADA_DOM_VERSION_PATCH})
-  set(CPACK_PACKAGE_INSTALL_DIRECTORY "collada-dom${COLLADA_DOM_SOVERSION}")
-  set(CPACK_PACKAGE_DESCRIPTION_FILE ${CMAKE_CURRENT_SOURCE_DIR}/description)
-  set(CPACK_RESOURCE_FILE_LICENSE ${CMAKE_CURRENT_SOURCE_DIR}/dom/license.txt)
-
-  set(CPACK_COMPONENT_${COMPONENT_PREFIX_UPPER}-BASE_DISPLAY_NAME "core libraries")
-  set(CPACK_COMPONENT_${COMPONENT_PREFIX_UPPER}-DEV_DISPLAY_NAME "C++ headers and build tools")
-  set(CPACK_COMPONENT_${COMPONENT_PREFIX_UPPER}-DEV_DEPENDS ${COMPONENT_PREFIX}-base)
-  
-  set(CPACK_DEBIAN_BUILD_DEPENDS debhelper cmake libxml2-dev zlib1g-dev pkg-config)
-
-  # debian
-  set(CPACK_DEBIAN_PACKAGE_PRIORITY optional)
-  set(CPACK_DEBIAN_PACKAGE_SECTION libs)
-  set(CPACK_DEBIAN_PACKAGE_DEPENDS ${CPACK_COMPONENTS_ALL})
-  set(CPACK_DEBIAN_PACKAGE_SUGGESTS)
-  set(CPACK_DEBIAN_CMAKE_OPTIONS "-DOPT_DOUBLE_PRECISION=${OPT_DOUBLE_PRECISION} -DOPT_BUILD_PACKAGE_DEFAULT=${OPT_BUILD_PACKAGE_DEFAULT}")
-  set(CPACK_DEBIAN_PACKAGE_REMOVE_SOURCE_FILES viewer fx rt Makefile.linux Makefile dom/codeGen dom/Makefile dom/external-libs/minizip dom/external-libs/zlib-1.2.5 dom/test dom/release dom/projects dom/make)
-  set(CPACK_DEBIAN_PACKAGE_SOURCE_COPY svn export --force)
-  set(CPACK_DEBIAN_CHANGELOG)
-  execute_process(COMMAND lsb_release -is
-    OUTPUT_VARIABLE _lsb_distribution OUTPUT_STRIP_TRAILING_WHITESPACE
-    RESULT_VARIABLE _lsb_release_failed)
-  set(CPACK_DEBIAN_DISTRIBUTION_NAME ${_lsb_distribution} CACHE STRING "Name of the distrubiton")
-  string(TOLOWER ${CPACK_DEBIAN_DISTRIBUTION_NAME} CPACK_DEBIAN_DISTRIBUTION_NAME)
-  if( ${CPACK_DEBIAN_DISTRIBUTION_NAME} STREQUAL "ubuntu" )
-    set(CPACK_DEBIAN_DISTRIBUTION_RELEASES lucid maverick natty oneiric precise CACHE STRING "Release code-names of the distrubiton release")
-  endif()
-  set(CPACK_COMPONENT_COLLADA-DOM_DEPENDS ${CPACK_COMPONENTS_ALL})
-
-  if( OPT_BUILD_PACKAGE_DEFAULT )
-    set(CPACK_COMPONENT_COLLADA-DOM-DEV_DEPENDS ${CPACK_DEBIAN_PACKAGE_NAME}-dev)
-    set(CPACK_COMPONENT_COLLADA-DOM-DEV_DISPLAY_NAME ${CPACK_COMPONENT_${COMPONENT_PREFIX_UPPER}-DEV_DISPLAY_NAME})
-    set(CPACK_COMPONENTS_ALL ${CPACK_COMPONENTS_ALL} collada-dom-dev)
-  endif()
-
-  set(DPUT_HOST "" CACHE STRING "PPA repository to upload the debian sources")
-  include(CPack)
-  include(DebSourcePPA)
-endif()
+#############REMINDER#########################
+#2017: There had been CPack code here. I don't see CPack in any CMakeLists.txt files today. It
+#was a lot to maintain on the Debian specific front, including many details to keep up-to-date.
