--- a/dom/CMakeLists.txt
+++ b/dom/CMakeLists.txt
@@ -1,37 +1,95 @@
-set(COLLADA_INTERNAL_INCLUDE ${CMAKE_CURRENT_SOURCE_DIR}/include)
-include_directories(${COLLADA_INTERNAL_INCLUDE})
-set(COLLADA_LIBS minizip ${ZLIB_LIBRARIES})
+if(CMAKE_SOURCE_DIR EQUAL CMAKE_CURRENT_SOURCE_DIR)
+message(FATAL_ERROR "Please run cmake out of the top-level directory")
+endif()
 
-file(GLOB dae_files ${CMAKE_CURRENT_SOURCE_DIR}/src/dae/*.cpp)
-file(GLOB libxmlplugin_files ${CMAKE_CURRENT_SOURCE_DIR}/src/modules/LIBXMLPlugin/*.cpp)
+#Assuming outputting a shared library.
+add_definitions(-DEXPORTING_COLLADA_DOM)
 
-set(COLLADA_BASE_SOURCES ${dae_files} ${libxmlplugin_files})
-set(COLLADA_COMPILE_FLAGS "${EXTRA_COMPILE_FLAGS}")
-# create dynamic libraries
-set(COLLADA_COMPILE_FLAGS "${COLLADA_COMPILE_FLAGS} -DEXPORTING_COLLADA_DOM")
+####EXTERNAL-LIBS############################
 
-add_library(collada-dom SHARED ${COLLADA_BASE_SOURCES})
-target_link_libraries(collada-dom ${COLLADA_LIBS})
-set_target_properties(collada-dom PROPERTIES
-  COMPILE_FLAGS "${COLLADA_COMPILE_FLAGS}"
-  LINK_FLAGS ""
-  OUTPUT_NAME collada-dom${COLLADA_DOM_LIBRARY_SUFFIX}
-  CLEAN_DIRECT_OUTPUT 1
-  SOVERSION 0 # always have it 0 since we're including the soversion as part of the library name
-  VERSION ${COLLADA_DOM_VERSION})
-if( MSVC )
-  install(TARGETS collada-dom EXPORT collada-dom-targets RUNTIME DESTINATION bin COMPONENT ${COMPONENT_PREFIX}-base LIBRARY DESTINATION bin COMPONENT ${COMPONENT_PREFIX}-base ARCHIVE DESTINATION lib${LIB_SUFFIX} COMPONENT ${COMPONENT_PREFIX}-base)
+if(COLLADA_DOM__LEGACY_TINYXML)
+try_external_lib(tinyxml tinyxml/trunk TINYXML)
+endif()
+
+try_package(zlib ZLIB)
+if(ZLIB_FOUND)	
+	string(APPEND PC_LIBS " -lz") #OBSOLETE?
 else()
-  install(TARGETS collada-dom EXPORT collada-dom-targets DESTINATION lib${LIB_SUFFIX} COMPONENT ${COMPONENT_PREFIX}-base )
+	try_external_libs(z zlib/trunk ZLIB)
 endif()
 
-install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/include/dae DESTINATION ${COLLADA_DOM_INCLUDE_INSTALL_DIR} COMPONENT ${COMPONENT_PREFIX}-dev PATTERN ".svn" EXCLUDE PATTERN ".~" EXCLUDE)
-install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/include/modules DESTINATION ${COLLADA_DOM_INCLUDE_INSTALL_DIR} COMPONENT ${COMPONENT_PREFIX}-dev  PATTERN ".svn" EXCLUDE PATTERN ".~" EXCLUDE)
-install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/include/dae.h 
- ${CMAKE_CURRENT_SOURCE_DIR}/include/DAEP.h
- ${CMAKE_CURRENT_SOURCE_DIR}/include/LINKAGE.HPP
-${CMAKE_CURRENT_SOURCE_DIR}/include/ColladaDOM.inl DESTINATION ${COLLADA_DOM_INCLUDE_INSTALL_DIR} COMPONENT ${COMPONENT_PREFIX}-dev )
-
-if( OPT_COMPILE_TESTS )
-  add_subdirectory(test)
+try_package(minizip MINIZIP)
+if(MINIZIP_FOUND)	
+	string(APPEND PC_LIBS " -lminizip") #OBSOLETE?
+else()
+	try_external_libs(minizip minizip/trunk MINIZIP)
 endif()
+
+if(COLLADA_DOM__LEGACY_LIBXML2)
+	try_package(LibXml2 LIBXML2)
+	if(LIBXML2_FOUND)
+		string(APPEND PC_LIBS " -lxml2") #OBSOLETE?	
+	else()
+		#EXPERIMENTAL
+		#libxml2 doesn't as of yet have a CMakeLists.txt
+		#file, so one has been provided.
+		try_external_libs(xml2 libxml2/cmake LIBXML2)	
+		if(LIBXML2_INCLUDE_DIRS)
+			string(APPEND LIBXML2_INCLUDE_DIRS "../trunk/include")
+		endif()
+	endif()
+endif()
+
+if(LIBXML2_INCLUDE_DIRS)
+	add_definitions(${LIBXML2_DEFINITIONS} -DBUILDING_IN_LIBXML)	
+endif()
+
+#HACK: The top-level script does this.
+set(PC_LIBS "${PC_LIBS}" PARENT_SCOPE) #OBSOLETE?	
+
+####BUILD/INSTALL############################
+
+#old note: declare minizip/zlib before libxml2!
+# (for some reason the precompiled libxml2 libraries have zlib.h/zconf.h)
+include_directories(${MINIZIP_INCLUDE_DIRS} ${ZLIB_INCLUDE_DIRS} ${LIBXML2_INCLUDE_DIRS})
+
+
+#Headers will never work with CMakePCHCompiler :(
+file(GLOB files "src/dae/*.cpp") #"include/*.*" "include/dae/*.h" "include/modules/*.h") 
+
+#Assuming SHARED for time being.
+add_library(colladadom25 SHARED ${files} src/modules/LIBXMLPlugin/daeLIBXMLPlugin.cpp)
+
+if(COLLADA_DOM__ENABLE_LIBRARY_PCH) #SOFT-DISABLING
+#Historically I've used ColladaDOM.inl as the precompiled header, but it includes
+#every single header, and so can be very confusing if users don't understand that
+#changing the headers requires rebuilding the PCH file.
+#SVN-EXTERNALS: cmake-modules/CMakePCHCompiler
+target_precompiled_header(colladadom25 include/ColladaDOM.inl)
+endif()
+
+set_target_properties(colladadom25 PROPERTIES 
+	POSITION_INDEPENDENT_CODE TRUE ##Assuming SHARED for time being.
+	CXX_STANDARD_REQUIRED OFF #Not sure if the viewer is C++11, but try to be C++98 here.
+	COMPILE_FLAGS ${_wincompile})
+
+target_link_libraries(colladadom25 ${_winlink} ${MINIZIP_LIBRARIES} ${ZLIB_LIBRARIES} ${LIBXML2_LIBRARIES})
+
+#### Monkey see, monkey do??? #############################
+
+install(TARGETS colladadom25 EXPORT ${PROJECT_NAME}Targets 
+	RUNTIME DESTINATION bin
+	LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
+	ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
+	INCLUDES DESTINATION include/${PROJECT_NAME})
+
+install(DIRECTORY include/dae 
+	DESTINATION include/${PROJECT_NAME} COMPONENT Devel PATTERN ".svn")
+install(FILES 
+include/dae.h 
+include/DAEP.h 
+include/LINKAGE.HPP
+include/WARNING.HPP
+include/ColladaDOM.inl
+include/modules/daeSTLDatabase.h DESTINATION include/${PROJECT_NAME} COMPONENT Devel)
+
