Fix 'x called with incorrect number of arguments.' bug where empty macros (CMake is all macros apparently) don't count arguments wise.
git-svn-id: https://svn.code.sf.net/p/collada-dom/code/trunk@921 dfea1ed5-6b0d-0410-973e-e49e28f48b26

--- a/dom/CMakeLists.txt
+++ b/dom/CMakeLists.txt
@@ -75,8 +75,9 @@ endif()
 set_target_properties(colladadom25 PROPERTIES 
 	POSITION_INDEPENDENT_CODE TRUE ##Assuming SHARED for time being.
 	CXX_STANDARD_REQUIRED OFF #Not sure if the viewer is C++11, but try to be C++98 here.
-	COMPILE_FLAGS ${_wincompile}
-	LINK_FLAGS ${_winlink})
+	#"strings" are needed to guard against 'x called with incorrect number of arguments.' :(
+	COMPILE_FLAGS "${_wincompile}"
+	LINK_FLAGS "${_winlink}")
 
 target_link_libraries(colladadom25 ${MINIZIP_LIBRARIES} ${ZLIB_LIBRARIES} ${LIBXML2_LIBRARIES})
 
